增加版面分析+ocr识别

--- a/OcrLibrary/src/main/cpp/CMakeLists.txt
+++ b/OcrLibrary/src/main/cpp/CMakeLists.txt
@@ -73,4 +73,5 @@ target_link_libraries(
         z
         ${log-lib}
         ${android-lib}
-        jnigraphics)
+        jnigraphics
+        c++_shared)
